<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeDo</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_FPassword">Forgot Password?</string>
    <string name="btn_login">LOG IN</string>
    <string name="reset_emailHint">Enter Your Email Address</string>
    <string name="reset_info">The confirmation link will be sent to your email.</string>
    <string name="reset_MainTitle">RESET PASSWORD</string>
    <string name="btn_reset">RESET</string>
    <string name="SignUp">Create Profile</string>
    <string name="SignUp_FullName">Full Name</string>
    <string name="SignUp_FullNameHint">Enter Full Name</string>
    <string name="SignUp_Email">Email Address</string>
    <string name="SignUp_EmailHint">Enter Email Address (Required for Verification)</string>
    <string name="SignUp_PhoneContact">Phone Contact</string>
    <string name="SignUp_PhoneContactHint">Enter Phone Contact</string>
    <string name="SignUp_Location">Location (City,State)</string>
    <string name="SignUp_LocationHint">Enter Location (Eg: Tondo, Manila)</string>
    <string name="SignUp_Password">Password</string>
    <string name="SignUp_PasswordHint">Enter Password</string>
    <string name="SignUp_ConfirmPassword">Confirm Password</string>
    <string name="SignUp_ConfirmPasswordHint">Enter Confirm Password</string>
    <string name="btn_signUp">SIGN UP</string>
    <string name="BuyerHomeTitle">CATEGORY</string>
    <string name="BuyerHomeTitle2">RECENTLY VIEWED</string>
    <string name="BuyerHomeTitle3">LOWEST PRICE</string>
    <string name="GraphicTitle">Hair and Makeup</string>
    <string name="WritingTitle">Dress Tailoring</string>
    <string name="VideoTitle">Car Rental</string>
    <string name="TechTitle">Venue</string>
    <string name="DataTitle">Audio/Video</string>
    <string name="MarketingTitle">Catering Services</string>
    <string name="BuyerAcc_Title_Profile">ACCOUNT</string>
    <string name="BuyerAcc_Title_Project">MY PROJECT</string>
    <string name="BuyerAcc_Title_General">GENERAL</string>
    <string name="BuyerAcc_btn_editProfile">Edit Profile</string>
    <string name="BuyerAcc_btn_addPostings">Post Project</string>
    <string name="BuyerAcc_btn_managePostings">Manage Postings</string>
    <string name="BuyerAcc_btn_switchUser">Switch to Seller</string>
    <string name="BuyerAcc_btn_faq">FAQs</string>
    <string name="BuyerAcc_btn_support">Support</string>
    <string name="BuyerAcc_btn_logout">Logout</string>
    <string name="BuyerAcc_postProject_MainTitle">Post a Project</string>
    <string name="BuyerAcc_postProject_Title">Title </string>
    <string name="BuyerAcc_postProject_TitleDesc">Enter Project Title</string>
    <string name="BuyerAcc_postProject_Desc">Description</string>
    <string name="BuyerAcc_postProject_DesSub">Enter Project Description</string>
    <string name="BuyerAcc_postProject_CategoryTitle">Category</string>
    <string name="BuyerAcc_postProject_BudgetTitle">Budget (PHP)</string>
    <string name="BuyerAcc_postProject_BudgetDesc">Enter Project Budget</string>
    <string name="BuyerAcc_postProject_DeliveryDaysTitle">Target Date</string>
    <string name="BuyerAcc_postProject_DeliveryDaysDesc">Enter Project Target Date</string>
    <string name="BuyerAcc_postProject_StatusTitle">Status</string>
    <string name="BuyerAcc_postProject_radioOpen">Open</string>
    <string name="BuyerAcc_postProject_radioClose">Closed</string>
    <string name="BuyerAcc_postProject_radioComplete">Completed</string>
    <string name="btn_publish">PUBLISH</string>
    <string name="editProfile">Edit Profile</string>
    <string name="editProject">Edit Project</string>
    <string name="btn_save">Save</string>
    <string name="BuyerOrders_PageTitle">Orders</string>
    <string name="BuyerOrders_btn_pending">Pending</string>
    <string name="BuyerOrders_btn_workInProgress">Work in Progress</string>
    <string name="BuyerOrders_btn_completed">Completed</string>
    <string name="BuyerOrders_btn_rated">Rated</string>
    <string name="BuyerOrders_btn_cancelled">Cancelled</string>
    <string name="BuyerOrders_count">(Num)</string>
    <string name="BuyerOrdersDetail_PageTitle">Order Details</string>
    <string name="BuyerOrdersPenDetail_SignalTitle">Waiting For Processing</string>
    <string name="SellerTaskPenDetail_SignalTitle">To Accept</string>
    <string name="BuyerOrdersProgressDetail_SignalTitle">In Progress</string>
    <string name="BuyerOrdersCompDetail_SignalTitle">Completed</string>
    <string name="BuyerOrdersRatedDetail_SignalTitle">Rated</string>
    <string name="BuyerOrdersCancelDetail_SignalTitle">Cancelled</string>
    <string name="BuyerOrdersNo">Order No.</string>
    <string name="BuyerOrdersNo_Data">No</string>
    <string name="BuyerOrdersTime">Order Time</string>
    <string name="BuyerOrdersTime_Data">Date Time</string>
    <string name="BuyerOrdersAcceptedTime">Accepted Time</string>
    <string name="BuyerOrdersAcceptedTime_Data">Date Time</string>
    <string name="BuyerOrdersCompletedTime">Completed Time</string>
    <string name="BuyerOrdersCompletedTime_Data">Date Time</string>
    <string name="BuyerOrdersRatedTime">Rated Time</string>
    <string name="BuyerOrdersRatedTime_Data">Date Time</string>
    <string name="BuyerOrdersCancelTime">Cancelled Time</string>
    <string name="BuyerOrdersCancelTime_Data">Date Time</string>
    <string name="BuyerOrdersReminder">Reminder</string>
    <string name="BuyerOrdersReminder_Data">If you have paid for your order, please send a message to the service provider so that payment can be verified and your order can be processed.</string>
    <string name="SellerReminder_Data">Kindly check the payment and proceed the order.</string>
    <string name="BuyerOrdersReason">Cancellation Reason</string>
    <string name="BuyerOrdersReasonDesc">Description</string>
    <string name="BuyerProjectDetail_PageTitle">View Project Details</string>
    <string name="BuyerProjectDetail_ProjectTitle">Project Name</string>
    <string name="BuyerProjectDetail_ProjectDesc">Description</string>
    <string name="BuyerProjectDetail_ProjectCatItem">Type of Project</string>
    <string name="BuyerProjectDetail_ProjectBudgetTitle">Budget</string>
    <string name="BuyerProjectDetail_ProjectBudgetUnit">PHP </string>
    <string name="BuyerProjectDetail_ProjectDeliveryTitle">Target Date</string>
    <string name="BuyerProjectDetail_ProjectDeliveryDays">X</string>
    <string name="BuyerProjectDetail_ProjectDeliveryDaysUnit">Days</string>
    <string name="BuyerProjectDetail_ProjectStatusTitle">Job Status</string>
    <string name="BuyerProjectDetail_ProjectStatusDesc">Status</string>
    <string name="btn_edit">EDIT</string>
    <string name="btn_delete">DELETE</string>
    <string name="BuyerCancelOrder_PageTitle">Cancel Order</string>
    <string name="BuyerCancelOrder_ReasonTitle">Reason</string>
    <string name="BuyerCancelOrder_ReasonDesc">Please mention your reasonable reason for cancelling the order.</string>
    <string name="BuyerRateService_PageTitle">Rate Service</string>
    <string name="BuyerRateService_Date">DD-MM-YY HH:MM</string>
    <string name="BuyerRateService_OrderIDTitle">Order ID:</string>
    <string name="BuyerRateService_Id">111002125</string>
    <string name="BuyerRateService_ServiceTitle">Hair and Makeup Services</string>
    <string name="BuyerRateService_CommentTitle">Comments</string>
    <string name="BuyerRateService_CommentDesc">Share your review and help others to make better choice!</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="BankInfo_Title">Reminder:</string>
    <string name="BankInfo_Desc">Only one Gcash account can be added.</string>
    <string name="btn_addBankInfo">Add Gcash Account</string>
    <string name="btn_manageBankInfo">Edit Account</string>
    <string name="btn_add">ADD</string>
    <string name="BuyerServiceDetail_SellerNameDesc">User Name</string>
    <string name="BuyerServiceDetail_DeliveryDays">Delivery Hours</string>
    <string name="BuyerServiceDetail_ServiceTitle">Service Title</string>
    <string name="BuyerServiceDetail_ServiceDesc">Description</string>
    <string name="BuyerServiceDetail_PriceTitle">Price</string>
    <string name="BuyerServiceDetail_PriceDesc">PHP</string>
    <string name="BuyerServiceDetail_RatingNum">(Num)</string>
    <string name="BuyerServiceDetail_AllServices">Other Services</string>
    <string name="BuyerServiceDetail_SampleDesign">— Sample Design —</string>
    <string name="BuyerServiceDetail_NoDesignPreview">No Preview Available</string>
    <string name="btn_review">Reviews</string>
    <string name="btn_contact">CONTACT</string>
    <string name="btn_purchase">BOOK</string>
    <string name="review_average">No Rating</string>
    <string name="show_more">&#160;Show More</string>
    <string name="show_less">&#160;Show Less</string>
    <string name="BuyerCheckout_PageTitle">Order Checkout</string>
    <string name="BuyerCheckout_ServiceTitle">Service Title</string>
    <string name="BuyerCheckout_BuyerNameTitle">Buyer Name:</string>
    <string name="BuyerCheckout_BuyerNameDesc">User Name</string>
    <string name="BuyerCheckout_BankAccountTitle">GCash Information (Seller)</string>
    <string name="BuyerCheckout_BankAccountOwnerName">Account Name</string>
    <string name="BuyerCheckout_BankAccountNumber">Account Number</string>
    <string name="BuyerCheckout_PaymentTitle">Payment</string>
    <string name="BuyerCheckout_payment_radioOnlineBanking">GCash</string>
    <string name="BuyerCheckout_PaymentStatementTitle">Payment Receipt (Image File)</string>
    <string name="BuyerCheckout_PaymentStatementDesc">Please upload your transaction receipt. Thank you.</string>
    <string name="BuyerCheckout_OrderSummaryDesc">Total:</string>
    <string name="BuyerCheckout_OrderSummaryPrice">Price</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="Seller_ServicePost_PageTitle">Post a Service</string>
    <string name="Seller_ServicePost_Title">Title</string>
    <string name="Seller_ServicePost_TitleDesc">Enter Service Title</string>
    <string name="Seller_ServicePost_Desc">Description</string>
    <string name="Seller_ServicePost_DesSub">Enter Service Information.
    Eg: What kind of services included in this package?</string>
    <string name="Seller_ServicePost_CategoryTitle">Category</string>
    <string name="Seller_ServicePost_SubCategoryTitle">Sub-Category</string>
    <string name="Seller_ServicePost_PriceTitle">Price (PHP)</string>
    <string name="Seller_ServicePost_PriceDesc">Enter Service Price</string>
    <string name="Seller_ServicePost_DeliveryDaysTitle">Delivery Hours</string>
    <string name="Seller_ServicePost_DeliveryDaysDesc">Enter Service Delivery Hours</string>
    <string name="Seller_ServicePost_ImageUpload">Upload Cover Image</string>
    <string name="Seller_ServicePost_MainTitle2">Bank Information (Payment Method)</string>
    <string name="Seller_ServicePost_BankNameTitle">Bank Name</string>
    <string name="Seller_ServicePost_BankNameDesc">Enter Bank Name (Eg: Gcash)</string>
    <string name="Seller_ServicePost_BeneficiaryNameTitle">Account Name</string>
    <string name="Seller_ServicePost_BeneficiaryNameDesc">Enter Account Name</string>
    <string name="Seller_ServicePost_AccountNumTitle">Account Number</string>
    <string name="Seller_ServicePost_AccountNumDesc">Enter Bank Account Number</string>
    <string name="SellerViewJobDetail_JobPriceUnit">PHP </string>
    <string name="BuyerManagePosting_JobTitle">Videographer and Photographer</string>
    <string name="BuyerManagePosting_JobStatus">Open</string>
    <string name="BuyerManagePosting_JobDesc">I am looking for a team that has a creative idea for my prenup shoot.</string>
</resources>