<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    tools:context=".SellerPostService">

    <LinearLayout
        android:id="@+id/linearLayoutPostSer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_bg">

        <ImageButton
            android:id="@+id/PostBackToSellerAccount"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/top_bg"
            android:src="@drawable/back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/Seller_ServicePost_PageTitle"

            android:textColor="#495680"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="55dp"
        android:background="@color/light_grey3" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearBtnPublish"
        android:layout_below="@+id/linearLayoutPostSer"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seller_ServicePost_Title"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/seller_serviceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:hint="@string/Seller_ServicePost_TitleDesc"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingEnd="14dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Seller_ServicePost_Desc"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/seller_serviceDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:gravity="top"
                android:hint="@string/Seller_ServicePost_DesSub"
                android:lineSpacingExtra="3dp"
                android:paddingStart="12dp"
                android:paddingTop="15dp"
                android:paddingEnd="14dp"
                android:paddingBottom="60dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Seller_ServicePost_CategoryTitle"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <RadioGroup
                android:id="@+id/ser_categoryGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/seller_serRadioHair"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:text="@string/GraphicTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioVenue"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/TechTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioDress"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/WritingTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioMedia"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/DataTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioCar"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/VideoTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioCatering"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/MarketingTitle"
                    android:textSize="14dp" />

                <RadioButton
                    android:id="@+id/seller_serRadioFlower"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="3dp"
                    android:text="Flower Services"
                    android:textSize="14dp" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/Seller_ServicePost_PriceTitle"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/seller_servicePrice"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:hint="@string/Seller_ServicePost_PriceDesc"
                android:inputType="numberDecimal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Seller_ServicePost_DeliveryDaysTitle"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/seller_serviceDays"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_input"
                android:hint="@string/Seller_ServicePost_DeliveryDaysDesc"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Seller_ServicePost_ImageUpload"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/seller_serPhoto"
                    android:layout_width="42dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_add_photo" />


            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

        <LinearLayout
            android:id="@+id/linearBtnPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btn_SerPublish"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:stateListAnimator="@null"
                app:cornerRadius="15dp"
                android:textStyle="bold"
                android:backgroundTint="#7E80EC"
                android:textSize="14dp"
                android:text="@string/btn_publish"/>

        </LinearLayout>

</RelativeLayout>