<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerPostServiceBankInfo"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/top_bg">

        <ImageButton
            android:id="@+id/addBackToBankInfo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/top_bg"
            android:src="@drawable/back_24" />


    </LinearLayout>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:outlineAmbientShadowColor="@color/grey"
            android:outlineSpotShadowColor="@color/grey"
            android:background="@color/light_grey3" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#cf142b"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="14dp"
                android:text="@string/Seller_ServicePost_MainTitle2"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Seller_ServicePost_BankNameTitle"
                android:textSize="14dp"/>

            <EditText
                android:id="@+id/seller_bankName"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="14dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:hint="@string/Seller_ServicePost_BankNameDesc"
                android:textColorHint="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/Seller_ServicePost_BeneficiaryNameTitle"/>

            <EditText
                android:id="@+id/seller_beneficialName"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="14dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:hint="@string/Seller_ServicePost_BeneficiaryNameDesc"
                android:textColorHint="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:text="@string/Seller_ServicePost_AccountNumTitle"/>

            <EditText
                android:id="@+id/seller_accountNumber"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/custom_input"
                android:paddingStart="12dp"
                android:paddingEnd="14dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:inputType="number"
                android:hint="@string/Seller_ServicePost_AccountNumDesc"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_bankAdd"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="#7E80EC"
                    android:stateListAnimator="@null"
                    android:text="@string/btn_add"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:cornerRadius="15dp"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>