<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/browse_jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/rubik_bold"
                android:lineSpacingExtra="3dp"
                android:maxLines="2"
                android:paddingEnd="18dp"
                android:text="@string/BuyerAcc_postProject_Title"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/browse_jobCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/rubik_regular"
                android:lineSpacingExtra="3dp"
                android:text="@string/BuyerAcc_postProject_CategoryTitle"
                android:textSize="12dp" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp">


                <TextView
                    android:id="@+id/browse_jobPrice"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/SellerViewJobDetail_JobPriceUnit"
                    android:textAlignment="textStart"
                    android:textColor="#cf142b"
                    android:textSize="14dp" />

            </LinearLayout>

        </RelativeLayout>

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/browse_jobDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/rubik_regular"
            android:lineSpacingExtra="3dp"
            android:paddingStart="16dp"
            android:paddingEnd="18dp"
            android:text="@string/BuyerAcc_postProject_Desc"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:colorClickableText="@color/blue"
            app:trimCollapsedText="@string/show_more"
            app:trimExpandedText="@string/show_less"
            app:trimLength="60"
            app:trimMode="trimModeLength" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey2"
            android:backgroundTintMode="src_atop" />

    </LinearLayout>


</RelativeLayout>