<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/managePosting_serTitle"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/BuyerManagePosting_JobTitle"
                android:textColor="@color/black"
                android:maxLines="2"
                android:ellipsize="end"
                android:lineSpacingExtra="3dp"
                android:textSize="15dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/managePosting_serStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:textColor="@color/red"
                android:text="@string/BuyerManagePosting_JobStatus"/>

        </LinearLayout>


            <TextView
                android:id="@+id/managePosting_serDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="3dp"
                android:paddingStart="19dp"
                android:paddingEnd="18dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/BuyerManagePosting_JobDesc"
                android:textColor="@color/black2"
                android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey2" />

    </LinearLayout>

</RelativeLayout>